style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,200;0,500;0,700;1,200;1,500;1,700&display=swap');
body {
    align-items: center;
    display: flex;
    height: 100vh;
    overflow: hidden;
    flex-direction: column;
    justify-content: center;
    margin: 0;
    padding: 0;
    background-color: rgb(16, 16, 16);
  }

a:link { text-decoration: none; }



  h1 {
    display: flex;
    color: white;
    font-size: 48px;
    font-family: 'Roboto Mono', monospace;
    font-weight: 700;
    margin: 10px;

  }
  h2 {
    display: flex;
    color: white;
    font-size: 30px;
    font-family: 'Roboto Mono', monospace;
    font-weight: 500;
    margin-bottom: 60px;
  }
  h3 {
    display: flex;
    color: white;
    font-size: 24px;
    font-family: 'Roboto Mono', monospace;
    font-weight: 200;
    text-decoration: none;
    margin-top: 10px;
  }

  .div-1 {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .h1-1 {
    display: flex;
    color:white;
    font-size: 48px;
    font-family: 'Roboto Mono', monospace;
    font-weight: 700;
  }

  #cards {
    display: flex;
    flex-wrap: wrap ; 
    gap: 8px;
    max-width: 1000px;
    width: calc(100% - 50px);
  }

.card {
  display: flex;
  background-color: rgb(32, 32, 32);
  border: 1px solid rgba(255, 255, 255,0.6);
  height: 300px;
  width: 300px;
  cursor: pointer;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  position: relative;
  border-radius: 10px;
  text-align: center;
}

.card:hover::before {
  opacity: 1;
}

.card svg {
  z-index: 3;
}

.card::before {
  background: radial-gradient(
    800px circle at var(--mouse-x) var(--mouse-y), 
    rgba(255, 255, 255, 0.1), 
    transparent 40%
  );
  border-radius: inherit;
  content: '';
  height: 100%; 
  left: 0px;
  position: absolute;
  top: 0px;
  width: 100%;
  opacity: 0;
  transition: opacity 0.5s ;
  
  
  z-index: 2;
}

